# Xiv2Pub

./: pyproject.toml  readme.md  requirements.txt
tex2epub/: __init__.py  __main__.py  cli.py  converter.py  downloader.py  extractor.py  postprocessor.py  preprocessor.py
tex2epub/styles/: epub.css
